# mifi_used_data

./: Cargo.toml  Makefile.toml  cats.db  data.db  readme.md
mifi_lib/: Cargo.toml  Makefile.toml  lmakeversionfromdate.json
mifi_lib/src/: databasemod.rs  datetimemod.rs  findinhtmlmod.rs  lib.rs  requestmod.rs
mifi_main/: Cargo.toml  Makefile.toml  data.db  lmakeversionfromdate.json  main.rs
mifi_main/src/: main.rs
src/: findinhtml.rs  main.rs
