[package]
name = "mifi_lib"
version = "2020.331.2115"
authors = ["Luciano <luciano.bestia@gmail.com>"]
edition = "2018"
description = "reads data used from mifi and saves to sqlite"
repository = "https://github.com/LucianoBestia/mifi_used_data"
readme = "README.md"
license = "MIT"
keywords = ["CLI","sqlite","reqwest"]
categories = ["learning"]
publish = false

[dependencies]
reqwest = { version = "0.10" }
tokio = { version = "0.2", features = ["full"] }
rusqlite={version ="0.21.0", features=["bundled"]}
time  = "0.2" 
regex = "1.3.6"
lazy_static="1.4.0"
chrono="0.4.11"
