[package]
name = "mifi_used_data"
version = "2020.404.1113"
authors = ["Luciano <luciano.bestia@gmail.com>"]
edition = "2018"
description = "reads data used from mifi and saves to sqlite"
repository = "https://github.com/LucianoBestia/mifi_used_data"
readme = "README.md"
license = "MIT"
keywords = ["CLI","sqlite","reqwest"]
categories = ["learning"]
publish = false

[dependencies]
mifi_lib = { path = "../mifi_lib" }
tokio = { version = "0.2", features = ["full"] }
